# DeviceMetricsHub

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/api/: device.py  device_new.py
app/core/: celery.py  celery_app.py
app/db/: database.py
app/models/: device.py
app/schemas/: device.py
app/services/: device_service.py
app/static/: index.html
app/tasks/: __init__.py
tests/: locustfile.py
